js/js.translator/testData/incremental/invalidation/inlineFunctionCircleUsage/lib1/l1b.1.kt
inline fun funB(): Int {
    konst f = ::funA
    if (false) {
        return f(false)
    }
    return 1
}
